# ftp-paperless-bridge

./: .env.example  CHANGELOG.md  Cargo.toml  Containerfile  Justfile  README.md  release.toml
.github/workflows/: build-release.yml
src/: main.rs
